k8s/overlays/stage/deployment/school-stage-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: school
  labels:
    app: managex-school
spec:
  selector:
    matchLabels:
      app: managex-school
  template:
    metadata:
      labels:
        app: managex-school
    spec:
      volumes:
        - name: school-secrets
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: managex-school-secrets
        - name: school-server-configuration
          configMap:
            name: managex-school-server-config
            items:
              - key: default
                path: default
        - name: school-nginx-configuration
          configMap:
            name: managex-school-nginx-config
            items:
              - key: nginx.conf
                path: nginx.conf
      containers:
        - name: managex-school
          resources:
            requests:
              cpu: 800m
              memory: 800Mi
            limits:
              cpu: "1"
              memory: 1Gi
