k8s/overlays/stage/deployment/school-stage-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: school-service
spec:
  type: NodePort
  selector:
    app: managex-school
