k8s/overlays/stage/deployment/school-stage-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: school-ingress
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:399600302704:certificate/53053dcd-d173-42cf-9e53-e15c9c64e7e2
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: managex-school-service
                port:
                  number: 80
  tls:
    - hosts:
        - greatifystg.school
